<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <GVL Name="SerialComWaage" Id="{00b79efb-5aba-4d6a-a5c6-7c6d3e17919b}">
    <Declaration><![CDATA[VAR_GLOBAL
	ELDataIn_Waage AT %I* : EL6inData22B;
	ELDataOut_Waage AT %Q* : EL6outData22B;
	
	RecWaage : ReceiveString;
	TxWaage : SendString;
	
	RxBufferWaage : ComBuffer;
	TxBufferWaage : ComBuffer;
	
	ErrorFastWaage : BOOL;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>